# rocket_rust_admin

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
migration/src/: field_types.rs  lib.rs  m20240613_064555_create_users_table.rs  m20240614_173112_create_group_table.rs  m20240614_180504_create_user_group_table.rs
src/: main.rs  settings.rs
src/api/: mod.rs  open_api.rs
src/auth/: mod.rs  settings.rs
src/auth/database/: group.rs
src/auth/models/: group.rs  mod.rs  user.rs  user_group.rs
src/auth/routes/: groups.rs  hello.rs  mod.rs  users.rs
src/db/: delete.rs  insert.rs  mod.rs  select.rs
src/models/: group.rs  mod.rs  prelude.rs  user.rs  user_group.rs
src/project/: mod.rs  responses.rs  validators.rs
src/routes/: hello.rs  hi_json.rs  mod.rs
