[package]
name = "rocket_rust_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["secrets", "json"] }
serde_json = "1.0"
serde = { version = "1.0"}
rocket_okapi = { version = "0.8", features = [ "swagger", "rapidoc" ] }
schemars = "0.8"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15"
